# ChangeLog for x11-proto/fontsproto
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/fontsproto/ChangeLog,v 1.26 2007/02/04 18:08:36 joshuabaergen Exp $

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  fontsproto-2.0.2.ebuild:
  Drop mirroring restriction.  Thanks to Zhang Le of bug #163088.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> fontsproto-2.0.2.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> fontsproto-2.0.2.ebuild:
  Mark 2.0.2 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  fontsproto-2.0.2.ebuild:
  arm/sh stable

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  fontsproto-2.0.2.ebuild:
  ppc/sparc/mips/alpha stable

  30 Jun 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-fontsproto-2.0.2, Manifest:
  Fix digest.

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  fontsproto-2.0.2.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> fontsproto-2.0.2.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  fontsproto-2.0.2.ebuild:
  x86 stable.

  14 May 2006; Donnie Berkholz <spyderous@gentoo.org>;
  fontsproto-2.0.2.ebuild:
  Digests got broken again; add RESTRICT=mirror and use upstream tarballs.
  Reported by Ciaran McCreesh.

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  fontsproto-2.0.2.ebuild:
  Add ~x86-fbsd keyword.

  22 Mar 2006; Donnie Berkholz <spyderous@gentoo.org>;
  fontsproto-2.0.2.ebuild:
  (#122726) Add missing keywords; apps that depend on this were keyworded, so
  it was tested and just got missed.

  09 Mar 2006; Aron Griffis <agriffis@gentoo.org> fontsproto-2.0.2.ebuild:
  Mark 2.0.2 ~ia64

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> fontsproto-2.0.2.ebuild:
  Added ~ppc64

  31 Jan 2006; Rene Nussbaumer <killerfox@gentoo.org>
  fontsproto-2.0.2.ebuild:
  Unstable on hppa.
