@@ -1,4 +1,4 @@
 DIST fontsproto-2.0.2.tar.bz2 45202 RMD160 ca0f656316425d4ed85a7486c7917defb2242910 SHA1 1244f63bd90668c7ddc88febbf4a220fd83ea492 SHA256 83bd547131aa11a232717a0f06d3c6cd58a0b2f6d541660bbe9ebf43073a8b7b
-EBUILD fontsproto-2.0.2.ebuild 529 RMD160 b994506cd10dbb0cc931cdde212bf7a48dbff79d SHA1 fd86032150af7a6e2ac862ae0157341be9170ad7 SHA256 e7bce0e56c63848f5c38c9f98c310da60bd3583c7e3f25ab9ddddc70309ebd61
-MISC ChangeLog 3158 RMD160 7aad0e30b78c0e0b2764e9ae2aeab03257a6d80c SHA1 07c41f2872b82c7c368921a8d668d3b049a4b86d SHA256 a67e4bdda6db9f5db57e4159ef5a44d801da6960f1901473c05c00ce7230ff98
+EBUILD fontsproto-2.0.2.ebuild 528 RMD160 90577b47774d7fc7700657a2094d2bb2e213e511 SHA1 199b6e3b521d81bbe6be51f4b77ccc044227482d SHA256 d186a0c98ad98bafd120235621ff6f34e2311f0e7743a9ea8ac8ebb24dc36c65
+MISC ChangeLog 3256 RMD160 4954524212bb431f459c410fa6e8eec6c93e68f4 SHA1 065fe0b13a3638ccf09d232f87984e5744212654 SHA256 d31e6cde15f34f0f6a24dda4d3d93e8948d90e34ff4210fb2084d51c89194dbc
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
